--- a/活动记录/图片爬取说明.md
+++ b/活动记录/图片爬取说明.md
@@ -4,9 +4,12 @@
 
 图片的名字或者说索引要做好，例如**ippawards大赛**的爬取了一张**2016年**获**一等奖**的**风景类**照片，照片名字叫做**abcde.png**，那么可以有一个文件夹文件夹名字是ippawards，表示是从ippawards网站上爬取的，里面存放的照片的名字是 **ippawards_2016\_一等奖\_风景照_abcde.png**,注意文件名字的 ippawards最好不要去掉，：
 
-注意：1. 虽然说是在目录 ippawards下面，但是为了方便组织，为了方便以后合并数据集，还是需要这样做的，总之，**文件的名字**需要完全按照**格式化**来书写，这样方便后期处理，即便是文件名字不合适后期也可以方便的根据这个格式修改，有了既定格式后期也很容易进行评分
+注意：
 
-​	     2. 文件名字格式不一定要按照这个来，但是文件名**尽可能包含需要的信息**是没错的，是一定需要的
+1. 虽然说是在目录 ippawards下面，但是为了方便组织，为了方便以后合并数据集，还是需要这样做的，总之，**文件的名字**需要完全按照**格式化**来书写，这样方便后期处理，即便是文件名字不合适后期也可以方便的根据这个格式修改，有了既定格式后期也很容易进行评分
+
+   	     2. 文件名字格式不一定要按照这个来，但是文件名**尽可能包含需要的信息**是没错的，是一定需要的
+   	     3. 我们不仅需要的是评分高的图片，**评分低的图片也是需要的**，评分低的图片分数低，也可以帮助神经网络更好的训练，例如ippawards的投稿未获奖图片，或是中途筛选下去的图片
 
 
 
