--- a/活动记录/图片爬取记录.md
+++ b/活动记录/图片爬取记录.md
@@ -2,8 +2,8 @@
 
 | 网站 | 爬取状态 | 图片数量 | 规范性 |
 | :--: | :------: | :------: | :----: |
-|      |          |          |        |
-|      |          |          |        |
+| 全球摄影网     | √         | 2000         | 无分类，无评级       |
+| 中国国家地理网     | √         | 400         | 有分类，无评级       |
 |      |          |          |        |
 
 
