添加活动记录

--- a/活动记录/图片爬取记录.md
+++ b/活动记录/图片爬取记录.md
@@ -20,11 +20,11 @@
 
 # 张继珂
 
-| 网站 | 爬取状态 | 图片数量 | 规范性 |
-| :--: | :------: | :------: | :----: |
-|      |          |          |        |
-|      |          |          |        |
-|      |          |          |        |
+|                  网站                  | 爬取状态 | 图片数量 |       规范性       |
+| :------------------------------------: | :------: | :------: | :----------------: |
+| [IPPAWARDS](https://www.ippawards.com) |    √     |   1320   | 部分有分类，无评级 |
+|                                        |          |          |                    |
+|                                        |          |          |                    |
 
 
 
