--- a/活动记录/图片爬取记录.md
+++ b/活动记录/图片爬取记录.md
@@ -1,10 +1,10 @@
 # 刘巧韵
 
 | 网站 | 爬取状态 | 图片数量 | 规范性 |
-| :--: | :------: | :------: | :----: |
+| :------------: | :------: | :------: | :----: |
 | 全球摄影网     | √         | 2000         | 无分类，无评级       |
 | 中国国家地理网     | √         | 400         | 有分类，无评级       |
-|      |          |          |        |
+| 各百家号（包括2017索尼世界摄影大赛）     | √         | 200         | 无分类，部分有评级，部分有描述       |
 
 
 
