--- a/活动记录/图片爬取记录.md
+++ b/活动记录/图片爬取记录.md
@@ -20,11 +20,11 @@
 
 # 张继珂
 
-|                  网站                  | 爬取状态 | 图片数量 |       规范性       |
-| :------------------------------------: | :------: | :------: | :----------------: |
-| [IPPAWARDS](https://www.ippawards.com) |    √     |   1320   | 部分有分类，无评级 |
-|                                        |          |          |                    |
-|                                        |          |          |                    |
+|                       网站                        | 爬取状态 | 图片数量 |       规范性       |
+| :-----------------------------------------------: | :------: | :------: | :----------------: |
+|      [IPPAWARDS](https://www.ippawards.com)       |    √     |   1320   | 部分有分类，无评级 |
+| [MPA手机摄影大赛](https://mobilephotoawards.com/) |          |          |                    |
+|    [IPA摄影大赛](https://www.photoawards.com/)    |          |          |                    |
 
 
 
