--- a/活动记录/图片爬取记录.md
+++ b/活动记录/图片爬取记录.md
@@ -6,7 +6,7 @@
 | [中国国家地理网](http://www.dili360.com/)        | √        | 2300      | 有分类，无评级 |
 | 各百家号（包括：<br>2017索尼世界摄影大赛、<br>2017Windland Smith Rice世界最佳自然摄影大奖、<br>锡耶纳国际摄影大奖、<br>2018ISPWP婚礼摄影大赛夏季赛、<br>2016年美国年度风光摄影师大赛、<br>2017美国《国家地理》全球摄影大赛中国区、<br>2018“行摄大师”杯全国艺术摄影大赛、<br>2017-2018"CIWEM"环境摄影大赛）                                       | √        | 550       | 无分类，<br>部分有评级，<br>部分有描述|
 | LOFTER一些摄影师的作品                           | √        |2200       |无分类，无评级  |  
-|[PSAChina国际摄影大赛](http://salon.psachina.org/)| √        |1760       |有分类，有评级  |
+|[PSAChina国际摄影大赛](http://salon.psachina.org/)| √        |1760       |有分类，无评级  |
 
 
 
