--- a/活动记录/图片爬取记录.md
+++ b/活动记录/图片爬取记录.md
@@ -10,7 +10,8 @@
 |[尼康摄影大赛](http://photocontest.nikon.com.cn/cn/)| √      |227        |有分类，有评级  |  
 |[国际美术摄影奖](https://fineartphotoawards.com/) | √        |473        |有分类，有评级  |  
 |[优秀摄影作品欣赏网](http://www.48tu.cn/)         | √        |1340       |有分类，有评级  |  
-|[Junebug Weddings婚纱摄影比赛](https://junebugweddings.com/photo-contests/)| √         |1010       |有分类，无评级  |
+|[Junebug Weddings婚纱摄影比赛](https://junebugweddings.com/photo-contests/)| √         |1010       |有分类，无评级  |  
+|[全景网](www.quanjing.com/creative/)             | √        |3400       |有分类，无评级  |
 
 
 
