--- a/活动记录/图片初次评级.md
+++ b/活动记录/图片初次评级.md
@@ -18,3 +18,9 @@
 | 哈姆丹国际摄影大赛        |                       |                       |              |          |
 | 英国年度风景              |                       |                       |              |          |
 | big picture natural world |                       |                       |              |          |
+| Instagram |                       |                       |              |          |
+| 堆糖 |                       |                       |              |          |
+| pinterest |                       |                       |              |          |
+| QQ空间 |                       |                       |              |          |
+| 百度图片 |                       |                       |              |          |
+| 摄影师个人网站 |                       |                       |              |          |
